node-chart/templates/deployment-FE.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
  namespace: node-main
spec:
  replicas: 2
  selector:
    matchLabels:
      app: node-main
  template:
    metadata:
      labels:
        app: node-main
    spec:
      containers:
        - name: node-container
          image: 730335483782.dkr.ecr.us-east-1.amazonaws.com/node-main/crud3tier:latest
         # imagePullPolicy: Always # this is used to deploy image everytime the code is pushed meaning previously if the code is image tag is same image is not pushed  
          ports:
            - containerPort: 3000
