node-chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-ingress
  namespace: node-main
  annotations:
    alb.ingress.kubernetes.io/success-codes: "200"
    alb.ingress.kubernetes.io/healthcheck-path: "/"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:730335483782:certificate/eaebb70e-31a3-4530-8f62-5bc7ab4e5b6c
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/group.name: node-app-group
    alb.ingress.kubernetes.io/ssl-redirect: "443"
spec:
  ingressClassName: alb
  rules:
    - host: keshavmittal.cloud
      http:
        paths:
          - path: /frontend
            pathType: Prefix
            backend:
              service:
                name: client-service
                port:
                  number: 80    
          - path: /backend
            pathType: Prefix
            backend:
              service:
                name: server-service
                port:
                  number: 80
